bug(core less) rmoving th bug that keeps from centering in different browsers. adding height: @img-height to img keep img from stretching

--- a/less/index.less
+++ b/less/index.less
@@ -186,6 +186,8 @@ body {
 .table-layout(@width: 90%) {
 	.m-lr-auto();
 	width: @width;
+
+
 }
 
 
@@ -268,12 +270,12 @@ p {
 
 	.img-sm {
 		max-width: @img-size;
+		max-height: @img-size;
 		border-radius: 10px;
 	}
 
 	.width {
 		width: @hr-width;
-
 	}
 
 	.header-bottom {
@@ -404,13 +406,11 @@ nav {
 
 // nav
 table {
-	text-transform: capitalize;
+	width: 90%;
 
-	th {
-		text-align: center;
-	}
-
+	// width: 100%
 	td {
-		text-align: center;
+		padding: 0.75rem;
+		vertical-align: top;
 	}
 }
